# sm-ai-v2-backend

./: .gitignore  README.md  pyproject.toml  verify_fix.py
docs/: API_SPECIFICATION.md  DATA_FLOW_ARCHITECTURE.md  TOOLS_SPECIFICATION.md  VLLM_TOOL_CALLING_SETUP.md
docs/process/: implementation_plan.md  task.md  walkthrough.md
mcp_tools/: mcp_server.py
scripts/: start_mcp_servers.sh
src/api/: agent_endpoints.py  chat_endpoints.py  dependencies.py  main.py  rag_endpoints.py  router.py
src/api/v1/: __init__.py  chat.py  docs.py  documents.py  settings.py
src/config/: settings.py
src/core/: embedding_service.py  llm_service.py  mcp_client.py  mcp_manager.py  session_manager.py
src/models/: api_schema.py
src/schema/: api_schema.py
src/systems/: build_graph.py  calling_tools.py
src/systems/agent/: build_agent.py  build_graph.py  calling_tools.py  external_agent.py  internal_agent.py  rag_agent.py  supervisor.py
src/systems/chat/: agent.py  graph.py  tools.py
src/systems/internal_tools/: __init__.py  web_search_tool.py
src/systems/rag/: exceptions.py  ingestion.py  rag_tool.py  tool.py  vector_store.py
src/systems/rag/loaders/: __init__.py  excel_loader.py  pptx_loader.py
